[Enhancement #357] Properly integrate optimized entity loading to query processing.
Disable for getResultStream, when limit/offset is set.